--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "finewithwhatever",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "node_modules/expo/AppEntry.js",
+  "private": true,
   "scripts": {
     "postinstall": "npm run webpack",
     "webpack": "./node_modules/webpack/bin/webpack.js",
     "test": "DATABASE_URL=postgres://localhost/fww ./node_modules/mocha/bin/mocha --watch --recursive test/**/*.js",
     "start:dev": "npm run webpack -- -w & nodemon server.js --ignore dist/ --ignore src/"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
+    "expo": "^27.0.1",
+    "react": "16.3.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
     "axios": "^0.18.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.3",
@@ -24,7 +22,6 @@
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
     "pg": "^7.4.1",
-    "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
     "sequelize": "^4.35.1",
