--- a/package.json
+++ b/package.json
@@ -5,11 +5,7 @@
     "postinstall": "npm run webpack",
     "webpack": "./node_modules/webpack/bin/webpack.js",
     "test": "DATABASE_URL=postgres://localhost/fww ./node_modules/mocha/bin/mocha --watch --recursive test/**/*.js",
-    "start:dev": "npm run webpack -- -w & nodemon server.js --ignore dist/ --ignore src/",
-    "start": "react-native-scripts start",
-    "eject": "react-native-scripts eject",
-    "android": "react-native-scripts android",
-    "ios": "react-native-scripts ios"
+    "start:dev": "npm run webpack -- -w & nodemon server.js --ignore dist/ --ignore src/"
   },
   "dependencies": {
     "expo": "^27.0.1",
@@ -31,10 +27,5 @@
     "sequelize": "^4.35.1",
     "supertest": "^3.1.0",
     "webpack": "^3.11.0"
-  },
-  "devDependencies": {
-    "react-native-scripts": "1.14.0",
-    "jest-expo": "~27.0.0",
-    "react-test-renderer": "16.3.1"
   }
 }
