--- a/react-native/app.json
+++ b/react-native/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "fww",
+    "name": "finewithwhatever",
     "description": "This project is really great.",
-    "slug": "fww",
+    "slug": "finewithwhatever",
     "privacy": "public",
     "sdkVersion": "27.0.0",
     "platforms": ["ios", "android"],
