--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "index.js",
   "private": true,
   "scripts": {
     "postinstall": "npm run webpack",
@@ -8,9 +8,7 @@
     "start:dev": "npm run webpack -- -w & nodemon server.js --ignore dist/ --ignore src/"
   },
   "dependencies": {
-    "expo": "^27.0.1",
     "react": "16.3.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
     "axios": "^0.18.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.3",
