--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "main": "index.js",
   "private": true,
   "scripts": {
+    "start": "JWT_KEY=fizzbuzz node server.js",
     "postinstall": "npm run webpack",
     "webpack": "./node_modules/webpack/bin/webpack.js",
-    "test": "DATABASE_URL=postgres://localhost/fww ./node_modules/mocha/bin/mocha --watch --recursive test/**/*.js",
-    "start:dev": "npm run webpack -- -w & nodemon server.js --ignore dist/ --ignore src/"
+    "test": "JWT_KEY=fizzbuzz DATABASE_URL=postgres://localhost/fww ./node_modules/mocha/bin/mocha --watch --recursive test/**/*.js",
+    "start:dev": "npm run webpack -- -w & JWT_KEY=fizzbuzz nodemon server.js --ignore dist/ --ignore src/"
   },
   "dependencies": {
-    "react": "16.3.1",
     "axios": "^0.18.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.3",
@@ -16,10 +16,12 @@
     "babel-preset-react": "^6.24.1",
     "chai": "^4.1.2",
     "express": "^4.16.2",
+    "jwt-simple": "^0.5.1",
     "mocha": "^5.2.0",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
     "pg": "^7.4.1",
+    "react": "16.3.1",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
     "sequelize": "^4.35.1",
