--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^4.2.2",
     "sequelize": "^4.35.1",
     "supertest": "^3.1.0",
+    "volleyball": "^1.5.0",
     "webpack": "^3.11.0"
   }
 }
