--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
     "sequelize": "^4.35.1",
+    "socket.io": "^2.1.1",
     "supertest": "^3.1.0",
     "volleyball": "^1.5.0",
     "webpack": "^3.11.0"
