added key to server

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start:dev": "npm run webpack -- -w & JWT_KEY=fizzbuzz nodemon server.js --ignore dist/ --ignore src/"
   },
   "dependencies": {
+    "@google/maps": "^0.4.6",
     "axios": "^0.18.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.3",
