--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "private": true,
   "scripts": {
     "start": "JWT_KEY=fizzbuzz node server.js",
-    "postinstall": "npm run webpack",
+    "postinstall": "npm run seed & npm run webpack",
     "webpack": "./node_modules/webpack/bin/webpack.js",
     "test": "JWT_KEY=fizzbuzz DATABASE_URL=postgres://localhost/fww ./node_modules/mocha/bin/mocha --watch --recursive test/**/*.js",
     "start:dev": "npm run webpack -- -w & JWT_KEY=fizzbuzz nodemon server.js --ignore dist/ --ignore src/",
-    "seed": "node ./server/seed"
+    "seed": "node ./server/seed.js"
   },
   "dependencies": {
     "@google/maps": "^0.4.6",
